--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,12 @@ dist
 dist-ssr
 *.local
 
+# dotenv environment variable files
 .env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
 
 # Editor directories and files
 .vscode/*
